[package]
name = "rss-feed-video-downloader"
description = "Downloads an RSS feed and tries to yt-dlp every entry"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/rss-feed-video-downloader"
authors = ["EdJoPaTo <rss-feed-video-downloader-rust@edjopato.de>"]
edition = "2021"
rust-version = "1.71.1"

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
rss = { version = "2", default-features = false }
ureq = { version = "3", default-features = false, features = ["rustls", "gzip"] }
